refactored zoom-api calls

--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -3,7 +3,7 @@ extends layout
 block content
     h1= title
     if isZoom
-        p Welcome to your Zoom app
+        p Welcome to your Zoom App
     else
         p You're viewing your Zoom App through the browser&nbsp;
             a(href=`${installURL}`) Click Here
