--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -15,6 +15,6 @@ html(lang="en")
         block content
         script(type='application/javascript' nonce=`${nonce}`)
             include /js/vendor/zoom-apps-js-sdk.0.13.0.js
-        script(type='application/javascript' nonce=`${nonce}`)
+        script(type='module' nonce=`${nonce}`)
             include /js/index.js
         noscript Javascript must be enabled to use this application
