--- a/server/views/error.pug
+++ b/server/views/error.pug
@@ -1,6 +1,6 @@
 extends layout
 
 block content
-    h1= message
-    h2= error.status
+    h1= `Error ${error.status}`
+    h2= message
     pre #{error.stack}
