--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -1,10 +1,11 @@
 extends layout
+include mixins/welcome
 
 block content
-    h1= title
-    if isZoom
-        p Welcome to your Zoom App
-    else
-        p You're viewing your Zoom App through the browser&nbsp;
-            a(href=`${installURL}`) Click Here
-            | &nbsp;to install your app in Zoom
+    h1=title
+    +welcome(isZoom, installURL)
+
+append scripts
+    if (isZoom)
+        script(src='/js/index.js' type='module')
+
