--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -1,17 +1,16 @@
-block variables
-
 doctype html
 html(lang="en")
     head
-        title= title
-        meta(charset='utf-8')
-        meta(http-equiv='X-UA-Compatible', content='IE=edge')
-        meta(name='description', content='Some description')
-        meta(name='viewport', content='width=device-width, initial-scale=1')
-        link(rel='stylesheet', href='/css/style.css')
+        block head
+            title= title
+            meta(charset='utf-8')
+            meta(http-equiv='X-UA-Compatible', content='IE=edge')
+            meta(name='description', content='Some description')
+            meta(name='viewport', content='width=device-width, initial-scale=1')
+            link(rel='stylesheet', href='/css/style.css')
     body
         block content
-        if isZoom
-            script(src='js/vendor/zoom-apps-js-sdk.0.13.0.js' type='application/javascript')
-            script(src='/js/index.js' type='module')
+        block scripts
+            if (isZoom)
+                script(src='/js/vendor/zoom-apps-js-sdk.0.13.0.js' type='application/javascript')
         noscript Javascript must be enabled to use this application
