Added pug styles template

--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -7,6 +7,7 @@ html(lang="en")
             meta(http-equiv='X-UA-Compatible', content='IE=edge')
             meta(name='description', content='Some description')
             meta(name='viewport', content='width=device-width, initial-scale=1')
+        block styles
             link(rel='stylesheet', href='/css/style.css')
     body
         block content
