--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -1,11 +1,15 @@
 extends layout
-include mixins/welcome
 
 block content
     h1=title
-    +welcome(isZoom, installURL)
+    if isZoom
+        p Welcome to your Zoom App
+    else
+        p You're viewing your Zoom App through the browser&nbsp;
+            a(href=`${installURL}`) Click Here
+            | &nbsp;to install your app in Zoom
 
 append scripts
-    if (isZoom)
+    if isZoom
         script(src='/js/index.js' type='module')
 
