--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -5,9 +5,9 @@ block content
     if isZoom
         p Welcome to your Zoom App
     else
-        p You're viewing your Zoom App through the browser&nbsp;
+        p You're viewing your Zoom App through the browser&nbsp; - &nbsp
             a(href=`${installURL}`) Click Here
-            | &nbsp;to install your app in Zoom
+            | &nbsp;to install your app in Zoom.
 
 append scripts
     if isZoom
