--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -12,6 +12,8 @@ html(lang="en")
     body
         block content
         block scripts
-            if (isZoom)
-                script(src='/js/vendor/zoom-apps-js-sdk.0.13.0.js' type='application/javascript')
+            if isZoom
+                script(src='/js/vendor/zoom-apps-js-sdk.0.13.0.min.js')
+                script(type='module' src='js/bundle.mjs')
+                script(nomodule src='/js/bundle.js')
         noscript Javascript must be enabled to use this application
