--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -13,5 +13,5 @@ append scripts
     if isZoom
         script(src='/js/vendor/zoom-apps-js-sdk.0.13.0.min.js')
         script(type="module" src='/js/bundle.mjs')
-        script(nomodule src='/js/bundle.mjs')
+        script(nomodule src='/js/bundle.js')
 
