added state verification

--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -6,7 +6,7 @@ block content
         p Welcome to your Zoom App
     else
         p You're viewing your Zoom App through the browser.&nbsp;
-            a(href=`${installURL}`) Click Here
+            a(href=`/install`) Click Here
             | &nbsp;to install your app in Zoom.
 
 append scripts
