--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -11,7 +11,7 @@ block content
 
 append scripts
     if isZoom
-        script(src='/js/vendor/zoom-apps-sdk.0.14.0.min.js')
+        script(src='https://appssdk.zoom.us/sdk.min.js')
         script(type="module" src='/js/bundle.mjs')
         script(nomodule src='/js/bundle.js')
 
